# RAGs

./: .gitignore  pyproject.toml
01_RAG/: 01_rag.ipynb  02_rag_with_pdf.ipynb  04_rag_multi_docs.ipynb
Vector/: chroma.sqlite3
